--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -383,10 +383,43 @@ padding-right:1.25rem;
   margin-bottom: 20px;
 }
 
+}
 
 
-  
+.comparison-table {
+  width: 100%;
+  border-collapse: separate; /* Cambia a 'separate' para que funcione border-spacing */
+  border-spacing: 10px; /* Espaciado entre celdas */ 
 
+  text-align: center;
+  font-family: "myFont", sans-serif;
+  font-size: 31px;
+  color: #9E4848;
+}
+.table-header {
+  font-weight: bold;
+  padding: 5px;
+  border: 1px solid #d9d9d9;
+  border-radius: 8px; /* Bordes redondeados */
+  text-align: center;
+  background-color: #f7f7f7;
+}
+
+.table-row-title {
+  font-weight: bold;
+  background-color: #ffffff;
+  padding: 15px;
+  border: 1px solid #d9d9d9;
+}
+
+.table-cell {
+  padding: 35px;
+  border: 1px solid #d9d9d9;
+  background-color: #ffffff;
+  border-radius: 8px; /* Bordes redondeados */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra */
+  text-align: center;
+  vertical-align: middle;
 }
 
 
