--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -405,6 +405,10 @@ padding-right:1.25rem;
   background-color: #f7f7f7;
 }
 
+.table-headerNone {
+  display: none;
+}
+
 .table-row-title {
   font-weight: bold;
   background-color: #ffffff;
